# avenir

./: .env.example  .gitignore  .prettierignore  Anchor.toml  Arcium.toml  LICENSE  README.md  package.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
app/: .cta.json  components.json  package.json  tsconfig.json  vite.config.ts
encrypted-ixs/: Cargo.toml
programs/avenir/: Cargo.toml
programs/avenir/src/: errors.rs  lib.rs
programs/avenir/src/instructions/: add_creator.rs  add_tiebreaker.rs  approve_resolver.rs  cancel_market.rs  cast_vote.rs  claim_payout.rs  create_market.rs  initialize.rs  mod.rs  open_dispute.rs  place_bet.rs  register_resolver.rs  remove_creator.rs  resolve_market.rs  settle_dispute_rewards.rs  stake_resolver.rs  withdraw_resolver.rs
programs/avenir/src/instructions/mpc/: add_dispute_vote.rs  add_dispute_vote_callback.rs  add_dispute_vote_comp_def.rs  compute_payouts.rs  compute_payouts_callback.rs  finalize_dispute.rs  finalize_dispute_callback.rs  finalize_dispute_comp_def.rs  hello_world.rs  hello_world_callback.rs  init_compute_payouts_comp_def.rs  init_dispute_tally.rs  init_dispute_tally_callback.rs  init_dispute_tally_comp_def.rs  init_hello_world_comp_def.rs  init_pool.rs  init_pool_callback.rs  init_pool_comp_def.rs  init_update_pool_comp_def.rs  mod.rs  update_pool.rs  update_pool_callback.rs
programs/avenir/src/state/: config.rs  creator_whitelist.rs  dispute.rs  dispute_tally.rs  market.rs  market_pool.rs  mod.rs  resolver.rs  resolver_registry.rs  user_position.rs
(+208 files in other folders)
